# SoloGen

./: .gitignore  CMakeLists.txt  Makefile.in  README.md  SoloGen.cpp  SoloGen.sln  cmdParse.cpp  cmdParse.h  configure  configure.ac  guitarConsts.h  tabGen.cpp  tabGen.h  test.tab
SoloGen/: SoloGen - Copy.cpp.bak  SoloGen.cpp  SoloGen.vcxproj  SoloGen.vcxproj.filters
SoloGen/libsndfile/: common.h  sndfile.hh
